--- a/apps/vifr.io/package.json
+++ b/apps/vifr.io/package.json
@@ -9,7 +9,7 @@
     "update-latest": "pnpm update --latest"
   },
   "devDependencies": {
-    "@vibefire/api": "^0.1.0",
-    "@vibefire/utils": "^0.1.0"
+    "@vibefire/api": "0.1.0",
+    "@vibefire/utils": "0.1.0"
   }
 }
