--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "@types/node": "^20.10.0",
     "@types/react": "^18.2.38",
     "@types/react-dom": "^18.2.17",
-    "@vibefire/config": "^0.1.0",
+    "@vibefire/config": "0.1.0",
     "autoprefixer": "^10.4.16",
     "css-to-react-native": "^3.2.0",
     "eslint": "^8.54.0",
