--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -8,13 +8,13 @@
     "update-latest": "pnpm update --latest"
   },
   "dependencies": {
-    "@vibefire/models": "^0.1.0",
-    "@vibefire/managers": "^0.1.0",
-    "@vibefire/services": "^0.1.0",
-    "@vibefire/utils": "^0.1.0"
+    "@vibefire/models": "0.1.0",
+    "@vibefire/managers": "0.1.0",
+    "@vibefire/services": "0.1.0",
+    "@vibefire/utils": "0.1.0"
   },
   "devDependencies": {
-    "@vibefire/config": "^0.1.0"
+    "@vibefire/config": "0.1.0"
   },
   "exports": {
     "./trpc": "./src/trpc/index.ts",
