--- a/apps/app.vibefire.native/package.json
+++ b/apps/app.vibefire.native/package.json
@@ -78,7 +78,6 @@
     "@tsconfig/react-native": "^3.0.3",
     "@types/webpack-env": "^1.18.4",
     "@vibefire/config": "0.1.0",
-    "babel-preset-expo": "^10.0.1",
-    "tailwindcss": "^3.3.3"
+    "babel-preset-expo": "^10.0.1"
   }
 }
