--- a/packages/managers/package.json
+++ b/packages/managers/package.json
@@ -22,7 +22,7 @@
     "./fauna-external": "./src/public/fauna-external-manager.ts",
     "./expo": "./src/public/expo-manager.ts",
     "./google-maps": "./src/public/google-maps-manager.ts",
-    "./clerk-webhook": "./src/public/clerk-wh-manager.ts",
+    "./clerk": "./src/public/clerk-manager.ts",
     "./vf-notification": "./src/public/vibefire-notification-manager.ts"
   }
 }
