seems to be working except local networking

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -10,6 +10,6 @@
     "update-latest": "pnpm update --latest"
   },
   "devDependencies": {
-    "@vibefire/config": "0.1.0"
+    "@vibefire/config": "workspace:*"
   }
 }
