--- a/apps/app.vibefire.native/package.json
+++ b/apps/app.vibefire.native/package.json
@@ -14,6 +14,9 @@
     "ios": "expo run:ios",
     "lint": "eslint ."
   },
+  "trustedDependencies": [
+    "@sentry/cli"
+  ],
   "dependencies": {
     "@clerk/clerk-expo": "^0.20.1",
     "@expo-google-fonts/inter": "^0.2.3",
@@ -23,10 +26,10 @@
     "@react-navigation/stack": "^6.3.20",
     "@sentry/react-native": "5.17.0",
     "@th3rdwave/react-navigation-bottom-sheet": "^0.2.7",
-    "@vibefire/api": "0.1.0",
-    "@vibefire/models": "0.1.0",
-    "@vibefire/shared-state": "0.1.0",
-    "@vibefire/utils": "0.1.0",
+    "@vibefire/api": "workspace:*",
+    "@vibefire/models": "workspace:*",
+    "@vibefire/shared-state": "workspace:*",
+    "@vibefire/utils": "workspace:*",
     "babel-plugin-module-resolver": "^5.0.0",
     "eslint-config-universe": "^12.0.0",
     "eslint-plugin-import": "^2.29.1",
@@ -76,7 +79,7 @@
     "@expo/config-plugins": "^7.8.4",
     "@tsconfig/react-native": "^3.0.3",
     "@types/webpack-env": "^1.18.4",
-    "@vibefire/config": "0.1.0",
+    "@vibefire/config": "workspace:*",
     "babel-preset-expo": "^10.0.1"
   }
 }
