--- a/packages/models/package.json
+++ b/packages/models/package.json
@@ -8,6 +8,6 @@
     "update-latest": "pnpm update --latest"
   },
   "devDependencies": {
-    "@vibefire/config": "0.1.0"
+    "@vibefire/config": "workspace:*"
   }
 }
