--- a/packages/shared-state/package.json
+++ b/packages/shared-state/package.json
@@ -7,10 +7,10 @@
     "update-latest": "pnpm update --latest"
   },
   "dependencies": {
-    "@vibefire/models": "0.1.0",
-    "@vibefire/utils": "0.1.0"
+    "@vibefire/models": "workspace:*",
+    "@vibefire/utils": "workspace:*"
   },
   "devDependencies": {
-    "@vibefire/config": "0.1.0"
+    "@vibefire/config": "workspace:*"
   }
 }
