--- a/services/api.vibefire.app/package.json
+++ b/services/api.vibefire.app/package.json
@@ -9,7 +9,7 @@
     "update-latest": "pnpm update --latest"
   },
   "dependencies": {
-    "@vibefire/api": "0.1.0",
-    "@vibefire/utils": "0.1.0"
+    "@vibefire/api": "workspace:*",
+    "@vibefire/utils": "workspace:*"
   }
 }
