locking wrangler version

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "packageManager": "pnpm@8.5.1",
   "scripts": {
     "build": "turbo build",
+    "clean-nms": "find . -name 'node_modules' -type d -prune -exec rm -rf '{}' +",
     "clean": "git clean -xdf ./node_modules */**/node_modules",
     "vfa": "turbo dev --parallel --filter vibefire.app",
     "app": "turbo dev --parallel --filter api.vibefire.app --filter app.vibefire.native",
@@ -60,6 +61,6 @@
     "turbo": "^1.10.16",
     "type-fest": "^4.8.2",
     "typescript": "^5.3.2",
-    "wrangler": "^3.17.1"
+    "wrangler": "3.17.1"
   }
 }
