seems like moving from root package.json has worked

--- a/apps/app.vibefire.native/package.json
+++ b/apps/app.vibefire.native/package.json
@@ -25,11 +25,16 @@
     "@react-native-community/datetimepicker": "7.6.1",
     "@react-navigation/stack": "^6.3.20",
     "@sentry/react-native": "5.17.0",
+    "@tanstack/react-query": "^4.18.0",
+    "@tanstack/react-query-devtools": "^4.18.0",
     "@th3rdwave/react-navigation-bottom-sheet": "^0.2.7",
-    "@vibefire/api": "workspace:*",
-    "@vibefire/models": "workspace:*",
-    "@vibefire/shared-state": "workspace:*",
-    "@vibefire/utils": "workspace:*",
+    "@trpc/client": "10.44.1",
+    "@trpc/react-query": "10.44.1",
+    "@vibefire/api": "0.1.0",
+    "@vibefire/models": "0.1.0",
+    "@vibefire/shared-state": "0.1.0",
+    "@vibefire/utils": "0.1.0",
+    "ajv": "^8.12.0",
     "babel-plugin-module-resolver": "^5.0.0",
     "eslint-config-universe": "^12.0.0",
     "eslint-plugin-import": "^2.29.1",
@@ -54,6 +59,9 @@
     "expo-status-bar": "~1.11.1",
     "expo-updates": "~0.24.9",
     "expo-web-browser": "^12.8.2",
+    "jotai": "^2.6.0",
+    "lodash": "^4.17.21",
+    "luxon": "^3.4.4",
     "nativewind": "^2.0.11",
     "react": "^18.2.0",
     "react-native": "0.73.2",
@@ -71,7 +79,9 @@
     "react-native-timeline-flatlist": "^0.8.0",
     "react-native-toast-message": "^2.2.0",
     "react-native-vision-camera": "^3.8.2",
-    "react-native-web": "~0.19.10"
+    "react-native-web": "~0.19.10",
+    "superjson": "^2.2.1",
+    "type-fest": "^4.8.2"
   },
   "devDependencies": {
     "@babel/core": "^7.23.9",
@@ -79,7 +89,8 @@
     "@expo/config-plugins": "^7.8.4",
     "@tsconfig/react-native": "^3.0.3",
     "@types/webpack-env": "^1.18.4",
-    "@vibefire/config": "workspace:*",
-    "babel-preset-expo": "^10.0.1"
+    "@vibefire/config": "0.1.0",
+    "babel-preset-expo": "^10.0.1",
+    "tailwindcss": "3.3.2"
   }
 }
