--- a/packages/services/package.json
+++ b/packages/services/package.json
@@ -12,14 +12,15 @@
     "@googlemaps/google-maps-services-js": "^3.3.36",
     "@supabase/supabase-js": "^2.33.1",
     "@vespaiach/axios-fetch-adapter": "^0.3.1",
-    "@vibefire/models": "workspace:*",
-    "@vibefire/utils": "workspace:*",
+    "@vibefire/models": "0.1.0",
+    "@vibefire/utils": "0.1.0",
     "axios": "0.27.2",
     "fauna": "^1.1.0",
-    "svix": "^1.10.0"
+    "svix": "^1.10.0",
+    "type-fest": "^4.8.2"
   },
   "devDependencies": {
-    "@vibefire/config": "workspace:*"
+    "@vibefire/config": "0.1.0"
   },
   "exports": {
     "./fauna": "./src/fauna/index.ts",
