--- a/apps/admin-tools/package.json
+++ b/apps/admin-tools/package.json
@@ -8,10 +8,11 @@
     "run": "pnpm run build && node dist/index.js"
   },
   "dependencies": {
-    "@vibefire/managers": "workspace:*",
-    "@vibefire/services": "workspace:*",
-    "@vibefire/utils": "workspace:*",
-    "dotenv": "^16.3.1"
+    "@vibefire/managers": "0.1.0",
+    "@vibefire/services": "0.1.0",
+    "@vibefire/utils": "0.1.0",
+    "dotenv": "^16.3.1",
+    "luxon": "^3.4.4"
   },
   "devDependencies": {
     "esbuild": "^0.19.10",
