--- a/apps/vibefire.app/package.json
+++ b/apps/vibefire.app/package.json
@@ -13,11 +13,17 @@
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "@headlessui/tailwindcss": "^0.2.0",
-    "@heroicons/react": "^2.0.18"
+    "@heroicons/react": "^2.0.18",
+    "tailwindcss": "3.3.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "next": "^14.0.3",
+    "postcss": "^8.4.31",
+    "autoprefixer": "^10.4.16"
   },
   "devDependencies": {
     "@tsconfig/next": "^2.0.0",
-    "@vibefire/config": "workspace:*",
-    "@vibefire/ui": "workspace:*"
+    "@vibefire/config": "0.1.0",
+    "@vibefire/ui": "0.1.0"
   }
 }
