--- a/apps/vifr.io/package.json
+++ b/apps/vifr.io/package.json
@@ -8,8 +8,13 @@
     "update": "pnpm update",
     "update-latest": "pnpm update --latest"
   },
+  "dependencies": {
+    "@cloudflare/workers-types": "^4.20231121.0",
+    "@vibefire/api": "0.1.0",
+    "@vibefire/utils": "0.1.0",
+    "hono": "^3.10.2"
+  },
   "devDependencies": {
-    "@vibefire/api": "workspace:*",
-    "@vibefire/utils": "workspace:*"
+    "wrangler": "3.17.1"
   }
 }
