--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -13,6 +13,8 @@
     "eslint-config-next": "^13.4.19",
     "eslint-config-prettier": "^9.0.0",
     "eslint-config-turbo": "^1.10.12",
-    "eslint-plugin-react": "7.33.2"
+    "eslint-plugin-react": "7.33.2",
+    "postcss": "^8.4.31",
+    "autoprefixer": "^10.4.16"
   }
 }
