--- a/services/handle.vibefire.app/package.json
+++ b/services/handle.vibefire.app/package.json
@@ -8,8 +8,11 @@
     "update": "pnpm update",
     "update-latest": "pnpm update --latest"
   },
+  "dependencies": {
+    "@vibefire/api": "0.1.0",
+    "@vibefire/utils": "0.1.0"
+  },
   "devDependencies": {
-    "@vibefire/api": "workspace:*",
-    "@vibefire/utils": "workspace:*"
+    "wrangler": "3.17.1"
   }
 }
