--- a/apps/app.vibefire.native/package.json
+++ b/apps/app.vibefire.native/package.json
@@ -22,14 +22,14 @@
     "@expo-google-fonts/inter": "^0.2.3",
     "@expo/html-elements": "^0.9.1",
     "@gorhom/bottom-sheet": "^4.6.0",
-    "@react-native-community/datetimepicker": "7.6.1",
+    "@react-native-community/datetimepicker": "7.6.2",
     "@react-navigation/stack": "^6.3.20",
-    "@sentry/react-native": "5.17.0",
-    "@tanstack/react-query": "^4.18.0",
-    "@tanstack/react-query-devtools": "^4.18.0",
+    "@sentry/react-native": "5.18.0",
+    "@tanstack/react-query": "5.18.1",
+    "@tanstack/react-query-devtools": "5.18.1",
     "@th3rdwave/react-navigation-bottom-sheet": "^0.2.7",
-    "@trpc/client": "10.44.1",
-    "@trpc/react-query": "10.44.1",
+    "@trpc/client": "10.45.1",
+    "@trpc/react-query": "10.45.1",
     "@vibefire/api": "0.1.0",
     "@vibefire/models": "0.1.0",
     "@vibefire/shared-state": "0.1.0",
@@ -64,16 +64,16 @@
     "luxon": "^3.4.4",
     "nativewind": "^2.0.11",
     "react": "^18.2.0",
-    "react-native": "0.73.2",
+    "react-native": "0.73.4",
     "react-native-element-dropdown": "^2.10.1",
-    "react-native-gesture-handler": "~2.14.1",
-    "react-native-maps": "1.8.0",
+    "react-native-gesture-handler": "2.15.0",
+    "react-native-maps": "1.10.1",
     "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-popup-menu": "^0.16.1",
-    "react-native-reanimated": "~3.6.2",
+    "react-native-reanimated": "3.7.0",
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-redash": "^18.1.3",
-    "react-native-safe-area-context": "4.8.2",
+    "react-native-safe-area-context": "4.9.0",
     "react-native-screens": "~3.29.0",
     "react-native-svg": "14.1.0",
     "react-native-timeline-flatlist": "^0.8.0",
@@ -91,6 +91,6 @@
     "@types/webpack-env": "^1.18.4",
     "@vibefire/config": "0.1.0",
     "babel-preset-expo": "^10.0.1",
-    "tailwindcss": "3.3.2"
+    "tailwindcss": "3.4.1"
   }
 }
