--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -13,8 +13,8 @@
     "@vibefire/services": "0.1.0",
     "@vibefire/utils": "0.1.0",
     "@trpc/react-query": "10.44.1",
-    "@trpc/server": "10.44.1",
-    "@sinclair/typebox": "^0.31.28",
+    "@trpc/server": "10.45.1",
+    "@sinclair/typebox": "0.32.13",
     "hono": "^3.10.2",
     "superjson": "^2.2.1",
     "type-fest": "^4.8.2"
