--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -10,7 +10,7 @@
     "@types/eslint": "^8.44.2",
     "@typescript-eslint/eslint-plugin": "^6.4.1",
     "@typescript-eslint/parser": "^6.4.1",
-    "eslint-config-next": "^13.4.19",
+    "eslint-config-next": "14.1.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-config-turbo": "^1.10.12",
     "eslint-plugin-react": "7.33.2",
