--- a/apps/app.vibefire.native/tsconfig.json
+++ b/apps/app.vibefire.native/tsconfig.json
@@ -2,28 +2,13 @@
   "extends": "@tsconfig/react-native/tsconfig.json",
   "compilerOptions": {
     "baseUrl": ".",
+    "strictNullChecks": true,
     "paths": {
-      "~/*": [
-        "./src/*"
-      ],
-      "#/*": [
-        "./assets/*"
-      ]
+      "~/*": ["./src/*"],
+      "#/*": ["./assets/*"]
     },
-    "types": [
-      "@types/jest",
-      "nativewind/types",
-      "webpack-env"
-    ]
+    "types": ["@types/jest", "nativewind/types", "webpack-env"]
   },
-  "include": [
-    "expo-plugins",
-    ".expo",
-    "src",
-    "*.ts",
-    "**/*.js"
-  ],
-  "exclude": [
-    "*.test.ts"
-  ]
+  "include": ["expo-plugins", ".expo", "src", "*.ts", "**/*.js"],
+  "exclude": ["*.test.ts"]
 }
