--- a/apps/vifr.io/package.json
+++ b/apps/vifr.io/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "deploy": "wrangler deploy",
-    "dev": "wrangler dev",
+    "dev": "wrangler dev --ip 0.0.0.0",
     "update": "pnpm update",
     "update-latest": "pnpm update --latest"
   },
@@ -12,7 +12,7 @@
     "@cloudflare/workers-types": "^4.20231121.0",
     "@vibefire/api": "0.1.0",
     "@vibefire/utils": "0.1.0",
-    "hono": "4.0.0"
+    "hono": "4.0.1"
   },
   "devDependencies": {
     "wrangler": "3.28.1"
