--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -12,10 +12,9 @@
     "@vibefire/managers": "0.1.0",
     "@vibefire/services": "0.1.0",
     "@vibefire/utils": "0.1.0",
-    "@trpc/react-query": "10.44.1",
-    "@trpc/server": "10.45.1",
-    "@sinclair/typebox": "0.32.13",
-    "hono": "^3.10.2",
+    "@trpc/server": "next",
+    "@sinclair/typebox": "0.32.14",
+    "hono": "4.0.1",
     "superjson": "^2.2.1",
     "type-fest": "^4.8.2"
   },
