--- a/packages/models/package.json
+++ b/packages/models/package.json
@@ -8,7 +8,7 @@
     "update-latest": "pnpm update --latest"
   },
   "dependencies": {
-    "@sinclair/typebox": "^0.31.28"
+    "@sinclair/typebox": "0.32.14"
   },
   "devDependencies": {
     "@vibefire/config": "0.1.0"
