--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -10,8 +10,8 @@
   "dependencies": {
     "@vibefire/models": "0.1.0",
     "h3-js": "^4.1.0",
-    "@sinclair/typebox": "^0.31.28",
-    "hono": "^3.10.2",
+    "@sinclair/typebox": "0.32.14",
+    "hono": "4.0.1",
     "luxon": "^3.4.4",
     "type-fest": "^4.8.2"
   },
