--- a/services/api.vibefire.app/package.json
+++ b/services/api.vibefire.app/package.json
@@ -4,18 +4,19 @@
   "private": true,
   "scripts": {
     "deploy": "wrangler deploy",
-    "dev": "wrangler dev",
+    "dev": "wrangler dev --ip 0.0.0.0",
     "update": "pnpm update",
     "update-latest": "pnpm update --latest"
   },
   "dependencies": {
+    "@cloudflare/workers-types": "^4.20231121.0",
+    "@hono/trpc-server": "0.1.1",
+    "@trpc/server": "next",
     "@vibefire/api": "0.1.0",
     "@vibefire/utils": "0.1.0",
-    "@cloudflare/workers-types": "^4.20231121.0",
-    "@hono/trpc-server": "^0.1.0",
-    "hono": "^3.10.2"
+    "hono": "4.0.1"
   },
   "devDependencies": {
-    "wrangler": "3.17.1"
+    "wrangler": "3.28.1"
   }
 }
