--- a/services/handle.vibefire.app/package.json
+++ b/services/handle.vibefire.app/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "deploy": "wrangler deploy",
-    "start": "wrangler dev",
+    "dev": "wrangler dev --ip 0.0.0.0",
     "update": "pnpm update",
     "update-latest": "pnpm update --latest"
   },
@@ -13,6 +13,6 @@
     "@vibefire/utils": "0.1.0"
   },
   "devDependencies": {
-    "wrangler": "3.17.1"
+    "wrangler": "3.28.1"
   }
 }
