--- a/services/vibefire-notification-service/package.json
+++ b/services/vibefire-notification-service/package.json
@@ -22,7 +22,7 @@
     "express": "^4.18.2"
   },
   "devDependencies": {
-    "esbuild": "^0.19.10",
+    "esbuild": "0.20.0",
     "npm-watch": "^0.11.0",
     "typescript": "^5.3.2"
   }
