--- a/apps/app.vibefire.native/package.json
+++ b/apps/app.vibefire.native/package.json
@@ -64,6 +64,7 @@
     "luxon": "^3.4.4",
     "nativewind": "^2.0.11",
     "react": "^18.2.0",
+    "react-error-boundary": "^4.0.12",
     "react-native": "0.73.4",
     "react-native-element-dropdown": "^2.10.1",
     "react-native-gesture-handler": "~2.14.0",
