began refatoring with new ts paths

--- a/.prettierrc
+++ b/.prettierrc
@@ -23,6 +23,11 @@
     "^~/components/(.*)$",
     "^~/styles/(.*)$",
     "^~/(.*)$",
+    "^!/utils/(.*)$",
+    "^!/components/(.*)$",
+    "^!/styles/(.*)$",
+    "^(\\!.*)/(.*)$",
+    "",
     "^[./]"
   ],
   "importOrderSeparation": false,
