--- a/packages/managers/tsconfig.json
+++ b/packages/managers/tsconfig.json
@@ -1,12 +1,10 @@
 {
   "extends": "@vibefire/config/tsconfig/ts-lib.json",
   "compilerOptions": {
-    "types": ["@types/jest"],
     "baseUrl": ".",
     "paths": {
       "~/*": ["./src/*"]
     }
   },
-  "include": ["src/**/*.ts"],
-  "exclude": ["*.test.ts"]
+  "include": ["src/**/*.ts"]
 }
