--- a/apps/app.vibefire.native/tsconfig.json
+++ b/apps/app.vibefire.native/tsconfig.json
@@ -8,7 +8,7 @@
     "strictNullChecks": true,
     "paths": {
       "#/*": ["./assets/*"],
-      "~/*": ["./src/*"],
+      "!/*": ["./src/*"],
       "!/*": ["./src/*"],
       "!api/*": ["../../packages/api/src/*"]
     },
