--- a/.prettierrc
+++ b/.prettierrc
@@ -24,6 +24,10 @@
     "^~/styles/(.*)$",
     "^~/(.*)$",
     "^!/utils/(.*)$",
+    "^!/api/(.*)$",
+    "^!/hooks/(.*)$",
+    "",
+    "^!/features/(.*)$",
     "^!/components/(.*)$",
     "^!/styles/(.*)$",
     "^(\\!.*)/(.*)$",
