began doing chips properly, still don't know how to structure compoents to make them easily styleable

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,14 @@
   "version": "0.2.0",
   "configurations": [
     {
+      "name": "Debug Exponent Hermes",
+      "request": "launch",
+      "type": "reactnativedirect",
+      "cwd": "${workspaceFolder}/apps/app.vibefire.native/",
+      "platform": "exponent",
+      "expoHostType": "lan"
+    },
+    {
       "name": "Debug Android",
       "cwd": "${workspaceFolder}/apps/app.vibefire.native/",
       "type": "reactnativedirect",
