--- a/apps/app.vibefire.native/package.json
+++ b/apps/app.vibefire.native/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "clean": "git clean -xdf .expo .turbo node_modules",
-    "dev": "expo start",
+    "dev": "expo start -g",
     "dev:and": "expo start --android",
     "dev:ios": "expo start --ios",
     "update": "pnpm update",
