abstracted simple list, implemented groups and events chip lists

--- a/apps/app.vibefire.native/tsconfig.json
+++ b/apps/app.vibefire.native/tsconfig.json
@@ -9,7 +9,7 @@
     "paths": {
       "#/*": ["./assets/*"],
       "!/*": ["./src/*"],
-      "!/*": ["./src/*"],
+      "!/c/*": ["./src/components/*"],
       "!api/*": ["../../packages/api/src/*"]
     },
     "types": ["@types/jest", "nativewind/types", "webpack-env"]
