--- a/apps/app.vibefire.native/package.json
+++ b/apps/app.vibefire.native/package.json
@@ -8,8 +8,6 @@
     "dev": "expo start -g",
     "dev:and": "expo start --android",
     "dev:ios": "expo start --ios",
-    "update": "pnpm update",
-    "update-latest": "pnpm update --latest",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "lint": "eslint ."
@@ -22,7 +20,7 @@
     "@expo-google-fonts/inter": "^0.2.3",
     "@expo/html-elements": "^0.9.1",
     "@gorhom/bottom-sheet": "^4.6.0",
-    "@react-native-community/datetimepicker": "7.6.1",
+    "@react-native-community/datetimepicker": "^8.0.0",
     "@react-navigation/stack": "^6.3.20",
     "@sentry/react-native": "5.17.0",
     "@tanstack/react-query": "5.20.1",
@@ -82,6 +80,7 @@
     "react-native-vision-camera": "^3.8.2",
     "react-native-web": "~0.19.10",
     "superjson": "^2.2.1",
+    "tailwind-merge": "^2.3.0",
     "type-fest": "^4.8.2"
   },
   "devDependencies": {
