adding group view

--- a/apps/app.vibefire.native/package.json
+++ b/apps/app.vibefire.native/package.json
@@ -20,9 +20,9 @@
     "@expo-google-fonts/inter": "^0.2.3",
     "@expo/html-elements": "^0.9.1",
     "@gorhom/bottom-sheet": "^4.6.0",
-    "@react-native-community/datetimepicker": "^8.0.0",
+    "@react-native-community/datetimepicker": "7.6.1",
     "@react-navigation/stack": "^6.3.20",
-    "@sentry/react-native": "5.17.0",
+    "@sentry/react-native": "~5.20.0",
     "@tanstack/react-query": "5.20.1",
     "@tanstack/react-query-devtools": "5.20.1",
     "@th3rdwave/react-navigation-bottom-sheet": "^0.2.7",
@@ -36,7 +36,7 @@
     "babel-plugin-module-resolver": "^5.0.0",
     "eslint-config-universe": "^12.0.0",
     "eslint-plugin-import": "^2.29.1",
-    "expo": "~50.0.4",
+    "expo": "51.0.2",
     "expo-application": "~5.8.3",
     "expo-auth-session": "^5.4.0",
     "expo-clipboard": "~5.0.1",
@@ -51,9 +51,9 @@
     "expo-linking": "~6.2.2",
     "expo-location": "~16.5.2",
     "expo-notifications": "~0.27.6",
-    "expo-router": "^3.4.6",
+    "expo-router": "~3.4.10",
     "expo-secure-store": "^12.8.1",
-    "expo-splash-screen": "~0.26.4",
+    "expo-splash-screen": "~0.26.5",
     "expo-status-bar": "~1.11.1",
     "expo-updates": "~0.24.10",
     "expo-web-browser": "^12.8.2",
@@ -63,7 +63,7 @@
     "nativewind": "^2.0.11",
     "react": "^18.2.0",
     "react-error-boundary": "^4.0.12",
-    "react-native": "0.73.4",
+    "react-native": "0.73.6",
     "react-native-element-dropdown": "^2.10.1",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-maps": "1.10.0",
