--- a/apps/app.vibefire.native/package.json
+++ b/apps/app.vibefire.native/package.json
@@ -16,15 +16,16 @@
     "@sentry/cli"
   ],
   "dependencies": {
-    "@clerk/clerk-expo": "^1.0.0",
+    "@clerk/clerk-expo": "^1.1.0",
     "@expo-google-fonts/inter": "^0.2.3",
-    "@expo/html-elements": "^0.9.1",
-    "@gorhom/bottom-sheet": "^4.6.0",
-    "@react-native-community/datetimepicker": "7.6.1",
+    "@expo/html-elements": "0.10.1",
+    "@expo/vector-icons": "^14.0.1",
+    "@gorhom/bottom-sheet": "^4.6.1",
+    "@react-native-community/datetimepicker": "7.7.0",
     "@react-navigation/stack": "^6.3.20",
-    "@sentry/react-native": "~5.20.0",
-    "@tanstack/react-query": "5.20.1",
-    "@tanstack/react-query-devtools": "5.20.1",
+    "@sentry/react-native": "5.22.2",
+    "@tanstack/react-query": "5.35.5",
+    "@tanstack/react-query-devtools": "5.35.5",
     "@th3rdwave/react-navigation-bottom-sheet": "^0.2.7",
     "@trpc/client": "next",
     "@trpc/react-query": "next",
@@ -32,65 +33,64 @@
     "@vibefire/models": "0.1.0",
     "@vibefire/shared-state": "0.1.0",
     "@vibefire/utils": "0.1.0",
-    "ajv": "^8.12.0",
-    "babel-plugin-module-resolver": "^5.0.0",
-    "eslint-config-universe": "^12.0.0",
+    "ajv": "^8.13.0",
+    "babel-plugin-module-resolver": "^5.0.2",
+    "eslint-config-universe": "^12.1.0",
     "eslint-plugin-import": "^2.29.1",
     "expo": "51.0.2",
-    "expo-application": "~5.8.3",
-    "expo-auth-session": "^5.4.0",
-    "expo-clipboard": "~5.0.1",
-    "expo-constants": "~15.4.5",
-    "expo-crypto": "~12.8.0",
-    "expo-dev-client": "~3.3.7",
-    "expo-device": "~5.9.3",
-    "expo-font": "~11.10.2",
-    "expo-image": "~1.10.5",
-    "expo-image-picker": "~14.7.1",
-    "expo-linear-gradient": "~12.7.1",
-    "expo-linking": "~6.2.2",
-    "expo-location": "~16.5.2",
-    "expo-notifications": "~0.27.6",
-    "expo-router": "~3.4.10",
-    "expo-secure-store": "^12.8.1",
-    "expo-splash-screen": "~0.26.5",
-    "expo-status-bar": "~1.11.1",
-    "expo-updates": "~0.24.10",
-    "expo-web-browser": "^12.8.2",
-    "jotai": "^2.6.0",
+    "expo-application": "5.9.1",
+    "expo-auth-session": "5.5.2",
+    "expo-clipboard": "6.0.3",
+    "expo-constants": "16.0.1",
+    "expo-crypto": "13.0.2",
+    "expo-dev-client": "4.0.13",
+    "expo-device": "6.0.2",
+    "expo-font": "~12.0.5",
+    "expo-image": "1.12.9",
+    "expo-image-picker": "15.0.4",
+    "expo-linear-gradient": "13.0.2",
+    "expo-linking": "6.3.1",
+    "expo-location": "17.0.1",
+    "expo-notifications": "0.28.1",
+    "expo-router": "3.5.11",
+    "expo-secure-store": "13.0.1",
+    "expo-splash-screen": "0.27.4",
+    "expo-status-bar": "1.12.1",
+    "expo-updates": "0.25.11",
+    "expo-web-browser": "13.0.3",
+    "jotai": "^2.8.0",
     "lodash": "^4.17.21",
     "luxon": "^3.4.4",
     "nativewind": "^2.0.11",
-    "react": "^18.2.0",
-    "react-error-boundary": "^4.0.12",
-    "react-native": "0.73.6",
-    "react-native-element-dropdown": "^2.10.1",
-    "react-native-gesture-handler": "~2.14.0",
-    "react-native-maps": "1.10.0",
+    "react": "18.2.0",
+    "react-error-boundary": "^4.0.13",
+    "react-native": "0.74.1",
+    "react-native-element-dropdown": "^2.12.0",
+    "react-native-gesture-handler": "2.16.2",
+    "react-native-maps": "1.14.0",
     "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-popup-menu": "^0.16.1",
-    "react-native-reanimated": "~3.6.2",
+    "react-native-reanimated": "~3.10.1",
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-redash": "^18.1.3",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
-    "react-native-svg": "14.1.0",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
+    "react-native-svg": "15.2.0",
     "react-native-timeline-flatlist": "^0.8.0",
     "react-native-toast-message": "^2.2.0",
-    "react-native-vision-camera": "^3.8.2",
-    "react-native-web": "~0.19.10",
+    "react-native-vision-camera": "4.0.3",
     "superjson": "^2.2.1",
-    "tailwind-merge": "^2.3.0",
-    "type-fest": "^4.8.2"
+    "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
+    "type-fest": "^4.8.2",
     "@babel/core": "^7.23.9",
     "@babel/runtime": "^7.23.9",
-    "@expo/config-plugins": "^7.8.4",
+    "@expo/config-plugins": "8.0.4",
     "@tsconfig/react-native": "^3.0.3",
     "@types/webpack-env": "^1.18.4",
     "@vibefire/config": "0.1.0",
-    "babel-preset-expo": "^10.0.1",
+    "babel-preset-expo": "11.0.5",
     "tailwindcss": "3.3.2"
   }
 }
