--- a/apps/vibefire.app/package.json
+++ b/apps/vibefire.app/package.json
@@ -11,14 +11,14 @@
     "update-latest": "pnpm update --latest"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.17",
+    "@headlessui/react": "2.0.3",
     "@headlessui/tailwindcss": "^0.2.0",
     "@heroicons/react": "^2.0.18",
     "tailwindcss": "3.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "next": "^14.0.3",
-    "postcss": "^8.4.31",
+    "postcss": "^8.4.38",
     "autoprefixer": "^10.4.16"
   },
   "devDependencies": {
