--- a/services/api.vibefire.app/package.json
+++ b/services/api.vibefire.app/package.json
@@ -4,13 +4,11 @@
   "private": true,
   "scripts": {
     "deploy": "wrangler deploy",
-    "dev": "wrangler dev --ip 0.0.0.0",
-    "update": "pnpm update",
-    "update-latest": "pnpm update --latest"
+    "dev": "wrangler dev --ip 0.0.0.0 --port 8787"
   },
   "dependencies": {
     "@cloudflare/workers-types": "^4.20231121.0",
-    "@hono/trpc-server": "0.1.1",
+    "@hono/trpc-server": "0.3.0",
     "@trpc/server": "next",
     "@vibefire/api": "0.1.0",
     "@vibefire/utils": "0.1.0",
