think I've fixed the app after upgrade

--- a/apps/app.vibefire.native/package.json
+++ b/apps/app.vibefire.native/package.json
@@ -18,14 +18,19 @@
   "dependencies": {
     "@clerk/clerk-expo": "^1.1.0",
     "@expo-google-fonts/inter": "^0.2.3",
-    "@expo/html-elements": "0.10.1",
-    "@expo/vector-icons": "^14.0.1",
+    "@expo/vector-icons": "^14.0.2",
+    "@formatjs/intl-datetimeformat": "^6.12.3",
+    "@formatjs/intl-displaynames": "^6.6.6",
+    "@formatjs/intl-getcanonicallocales": "^2.3.0",
+    "@formatjs/intl-locale": "^3.4.5",
+    "@formatjs/intl-numberformat": "^8.10.1",
+    "@formatjs/intl-pluralrules": "^5.2.12",
+    "@formatjs/intl-relativetimeformat": "^11.2.12",
     "@gorhom/bottom-sheet": "^4.6.1",
-    "@react-native-community/datetimepicker": "7.7.0",
-    "@react-navigation/stack": "^6.3.20",
+    "@react-native-community/datetimepicker": "8.0.1",
     "@sentry/react-native": "5.22.2",
-    "@tanstack/react-query": "5.35.5",
-    "@tanstack/react-query-devtools": "5.35.5",
+    "@tanstack/react-query": "5.36.0",
+    "@tanstack/react-query-devtools": "5.36.0",
     "@th3rdwave/react-navigation-bottom-sheet": "^0.2.7",
     "@trpc/client": "next",
     "@trpc/react-query": "next",
@@ -37,7 +42,7 @@
     "babel-plugin-module-resolver": "^5.0.2",
     "eslint-config-universe": "^12.1.0",
     "eslint-plugin-import": "^2.29.1",
-    "expo": "51.0.2",
+    "expo": "~51.0.5",
     "expo-application": "5.9.1",
     "expo-auth-session": "5.5.2",
     "expo-clipboard": "6.0.3",
@@ -52,7 +57,7 @@
     "expo-linking": "6.3.1",
     "expo-location": "17.0.1",
     "expo-notifications": "0.28.1",
-    "expo-router": "3.5.11",
+    "expo-router": "~3.5.12",
     "expo-secure-store": "13.0.1",
     "expo-splash-screen": "0.27.4",
     "expo-status-bar": "1.12.1",
