--- a/services/vibefire-sms-service/package.json
+++ b/services/vibefire-sms-service/package.json
@@ -22,8 +22,8 @@
     "express": "^4.18.2"
   },
   "devDependencies": {
-    "esbuild": "0.20.0",
-    "npm-watch": "^0.11.0",
+    "esbuild": "0.21.1",
+    "npm-watch": "0.13.0",
     "typescript": "^5.3.2"
   }
 }
