working on groups

--- a/apps/app.vibefire.native/package.json
+++ b/apps/app.vibefire.native/package.json
@@ -42,7 +42,7 @@
     "babel-plugin-module-resolver": "^5.0.2",
     "eslint-config-universe": "^12.1.0",
     "eslint-plugin-import": "^2.29.1",
-    "expo": "~51.0.5",
+    "expo": "~51.0.6",
     "expo-application": "5.9.1",
     "expo-auth-session": "5.5.2",
     "expo-clipboard": "6.0.3",
@@ -57,11 +57,11 @@
     "expo-linking": "6.3.1",
     "expo-location": "17.0.1",
     "expo-notifications": "0.28.1",
-    "expo-router": "~3.5.12",
+    "expo-router": "~3.5.14",
     "expo-secure-store": "13.0.1",
     "expo-splash-screen": "0.27.4",
     "expo-status-bar": "1.12.1",
-    "expo-updates": "0.25.11",
+    "expo-updates": "~0.25.12",
     "expo-web-browser": "13.0.3",
     "jotai": "^2.8.0",
     "lodash": "^4.17.21",
