--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "packages/*",
     "services/*"
   ],
+  "packageManager": "bun@1.0.25",
   "scripts": {
     "build": "turbo build",
     "clean-nms": "find . -name 'node_modules' -type d -prune -exec rm -rf '{}' +",
@@ -32,6 +33,6 @@
     "prettier-plugin-tailwindcss": "^0.5.7",
     "syncpack": "^12.3.2",
     "ts-jest": "^29.1.1",
-    "turbo": "^1.10.16"
+    "turbo": "^2.0.3"
   }
 }
