Added new event and group models, updated import paths.

--- a/apps/app.vibefire.native/tsconfig.json
+++ b/apps/app.vibefire.native/tsconfig.json
@@ -10,7 +10,8 @@
       "#/*": ["./assets/*"],
       "!/*": ["./src/*"],
       "!/c/*": ["./src/components/*"],
-      "!api/*": ["../../packages/api/src/*"]
+      "!api/*": ["../../packages/api/src/*"],
+      "!models/*": ["../../packages/models/src/*"]
     },
     "types": ["@types/jest", "nativewind/types", "webpack-env"]
   },
