--- a/packages/models/tsconfig.json
+++ b/packages/models/tsconfig.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "~/*": ["./src/*"]
+      "!models/*": ["./src/*"]
     }
   },
   "include": ["index.ts", "src/**/*.ts"]
