--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -3,7 +3,8 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "!api/*": ["./src/*"]
+      "!api/*": ["./src/*"],
+      "!models/*": ["../../packages/models/src/*"]
     }
   },
   "include": ["src/**/*.ts"]
