--- a/packages/managers/tsconfig.json
+++ b/packages/managers/tsconfig.json
@@ -3,7 +3,8 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "~/*": ["./src/*"]
+      "~/*": ["./src/*"],
+      "!models/*": ["../../packages/models/src/*"]
     }
   },
   "include": ["src/**/*.ts"]
