--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,12 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# ours
+apps/app.vibefire.native/android
+apps/app.vibefire.native/ios
+**/.dev.vars
+**/.wrangler/*
+.env*
+
 # dependencies
 node_modules
 .pnp
@@ -53,8 +60,3 @@ web-build/
 # Temporary files created by Metro to check the health of the file watcher
 .metro-health-check*
 
-# ours
-apps/app.vibefire.native/android
-apps/app.vibefire.native/ios
-**/.dev.vars
-**/.wrangler/*
