--- a/apps/app.vibefire.native/package.json
+++ b/apps/app.vibefire.native/package.json
@@ -29,8 +29,8 @@
     "@gorhom/bottom-sheet": "^4.6.1",
     "@react-native-community/datetimepicker": "8.0.1",
     "@sentry/react-native": "5.22.2",
-    "@tanstack/react-query": "5.36.0",
-    "@tanstack/react-query-devtools": "5.36.0",
+    "@tanstack/react-query": "^5.40.0",
+    "@tanstack/react-query-devtools": "^5.40.0",
     "@th3rdwave/react-navigation-bottom-sheet": "^0.2.7",
     "@trpc/client": "next",
     "@trpc/react-query": "next",
