--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "prettier-plugin-tailwindcss": "^0.5.7",
     "syncpack": "^12.3.2",
     "ts-jest": "^29.1.1",
-    "turbo": "^2.0.3"
+    "turbo": "^2.0.3",
+    "dotenv": "^16.4.5"
   }
 }
