--- a/packages/managers/tsconfig.json
+++ b/packages/managers/tsconfig.json
@@ -3,8 +3,10 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "~/*": ["./src/*"],
-      "!models/*": ["../../packages/models/src/*"]
+      "!managers/*": ["./src/*"],
+      "!models/*": ["../../packages/models/src/*"],
+      "!utils/*": ["../../packages/utils/src/*"],
+      "!services/*": ["../../packages/services/src/*"]
     }
   },
   "include": ["src/**/*.ts"]
