--- a/packages/services/tsconfig.json
+++ b/packages/services/tsconfig.json
@@ -3,7 +3,8 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "~/*": ["./src/*"]
+      "!services/*": ["./src/*"],
+      "!models/*": ["../../packages/models/src/*"]
     }
   },
   "include": ["src/**/*.ts"]
