removed result from managers, is now used sparingly :/

--- a/packages/managers/package.json
+++ b/packages/managers/package.json
@@ -4,7 +4,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "test": "DOTENV_CONFIG_PATH=.env.test jest --detectOpenHandles --forceExit",
+    "test": "DOTENV_CONFIG_PATH=.env.test jest --detectOpenHandles",
     "update": "pnpm update",
     "update-latest": "pnpm update --latest"
   },
