--- a/packages/managers/tsconfig.json
+++ b/packages/managers/tsconfig.json
@@ -9,5 +9,5 @@
       "!services/*": ["../../packages/services/src/*"]
     }
   },
-  "include": ["src/**/*.ts"]
+  "include": ["src/**/*.ts", "src/errors.ts"]
 }
