--- a/packages/utils/tsconfig.json
+++ b/packages/utils/tsconfig.json
@@ -6,5 +6,5 @@
       "~/*": ["./src/*"]
     }
   },
-  "include": ["index.ts", "src/**/*.ts"]
+  "include": ["index.ts", "src/**/*.ts", "../managers/src/errors.ts"]
 }
