--- a/apps/app.vibefire.native/package.json
+++ b/apps/app.vibefire.native/package.json
@@ -87,6 +87,9 @@
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.3.0"
   },
+  "peerDependencies": {
+    "react-dom": "18.2.0"
+  },
   "devDependencies": {
     "type-fest": "^4.8.2",
     "@babel/core": "^7.23.9",
