--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -6,6 +6,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@badrap/result": "^0.2.13",
     "@sinclair/typebox": "0.32.34",
     "@vibefire/models": "0.1.0",
     "h3-js": "^4.1.0",
