--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/react": "^18.2.38",
     "@types/react-dom": "^18.2.17",
     "@vibefire/config": "0.1.0",
+    "dotenv": "^16.4.5",
     "eslint": "^8.54.0",
     "jest": "^29.7.0",
     "prettier": "^3.1.0",
@@ -34,6 +35,6 @@
     "syncpack": "^12.3.2",
     "ts-jest": "^29.1.1",
     "turbo": "^2.0.3",
-    "dotenv": "^16.4.5"
+    "typescript": "^5.5.3"
   }
 }
