adding abort error

--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -8,15 +8,13 @@
     "update-latest": "pnpm update --latest"
   },
   "dependencies": {
-    "@sinclair/typebox": "0.32.34",
     "@trpc/server": "next",
     "@vibefire/managers": "0.1.0",
     "@vibefire/models": "0.1.0",
     "@vibefire/services": "0.1.0",
     "@vibefire/utils": "0.1.0",
     "hono": "4.3.4",
-    "superjson": "^2.2.1",
-    "type-fest": "^4.8.2"
+    "superjson": "^2.2.1"
   },
   "devDependencies": {
     "@vibefire/config": "0.1.0"
