--- a/packages/managers/package.json
+++ b/packages/managers/package.json
@@ -12,8 +12,7 @@
     "@vibefire/models": "0.1.0",
     "@vibefire/services": "0.1.0",
     "@vibefire/utils": "0.1.0",
-    "expo-server-sdk": "^3.7.0",
-    "type-fest": "^4.8.2"
+    "expo-server-sdk": "^3.7.0"
   },
   "devDependencies": {
     "@vibefire/config": "0.1.0"
