impl the abort error with refactor

--- a/packages/managers/package.json
+++ b/packages/managers/package.json
@@ -19,6 +19,7 @@
   },
   "exports": {
     "./errors": "./src/errors.ts",
+    "./result": "./src/manager-result.ts",
     "./userfacing": "./src/userfacing/index.ts",
     "./expo": "./src/public/expo-manager.ts",
     "./google-maps": "./src/public/google-maps-manager.ts",
