--- a/packages/managers/package.json
+++ b/packages/managers/package.json
@@ -5,14 +5,14 @@
   "private": true,
   "scripts": {
     "test": "DOTENV_CONFIG_PATH=.env.test jest --detectOpenHandles",
-    "update": "pnpm update",
-    "update-latest": "pnpm update --latest"
+    "update": "bun update",
+    "update-latest": "bun update --latest"
   },
   "dependencies": {
     "@vibefire/models": "0.1.0",
     "@vibefire/services": "0.1.0",
     "@vibefire/utils": "0.1.0",
-    "expo-server-sdk": "^3.7.0"
+    "expo-server-sdk": "^3.10.0"
   },
   "devDependencies": {
     "@vibefire/config": "0.1.0"
