--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -4,7 +4,10 @@
     "baseUrl": ".",
     "paths": {
       "!api/*": ["./src/*"],
-      "!models/*": ["../../packages/models/src/*"]
+      "!models/*": ["../../packages/models/src/*"],
+      "!managers/*": ["../../packages/managers/src/*"],
+      "!utils/*": ["../../packages/utils/src/*"],
+      "!services/*": ["../../packages/services/src/*"]
     }
   },
   "include": ["src/**/*.ts"]
