--- a/packages/services/package.json
+++ b/packages/services/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "test": "DOTENV_CONFIG_PATH=.env.test jest --detectOpenHandles",
-    "update": "pnpm update",
-    "update-latest": "pnpm update --latest"
+    "update": "bun update",
+    "update-latest": "bun update --latest"
   },
   "dependencies": {
     "@clerk/backend": "1.1.3",
@@ -26,7 +26,7 @@
     "./vibefire-notifications": "./src/vibefire-notifications/index.ts",
     "./clerk": "./src/clerk/index.ts",
     "./svix": "./src/svix/index.ts",
-    "./cf-images": "./src/cloudflare-images/index.ts",
+    "./cloudflare-images": "./src/cloudflare-images/index.ts",
     "./g-maps": "./src/google-maps/index.ts"
   }
 }
