I'm not sure but a lot

--- a/apps/app.vibefire.native/tsconfig.json
+++ b/apps/app.vibefire.native/tsconfig.json
@@ -11,7 +11,10 @@
       "!/*": ["./src/*"],
       "!/c/*": ["./src/components/*"],
       "!api/*": ["../../packages/api/src/*"],
-      "!models/*": ["../../packages/models/src/*"]
+      "!models/*": ["../../packages/models/src/*"],
+      "!managers/*": ["../../packages/managers/src/*"],
+      "!utils/*": ["../../packages/utils/src/*"],
+      "!services/*": ["../../packages/services/src/*"]
     },
     "types": ["@types/jest", "nativewind/types", "webpack-env"]
   },
