--- a/apps/app.vibefire.native/package.json
+++ b/apps/app.vibefire.native/package.json
@@ -15,6 +15,16 @@
   "trustedDependencies": [
     "@sentry/cli"
   ],
+  "expo": {
+    "install": {
+      "exclude": [
+        "react-native@~0.74.0",
+        "react-native-reanimated@~3.10.0",
+        "react-native-gesture-handler@~2.16.1",
+        "react-native-screens@~3.31.1"
+      ]
+    }
+  },
   "dependencies": {
     "@clerk/clerk-expo": "^1.1.0",
     "@expo-google-fonts/inter": "^0.2.3",
@@ -26,12 +36,11 @@
     "@formatjs/intl-numberformat": "^8.10.1",
     "@formatjs/intl-pluralrules": "^5.2.12",
     "@formatjs/intl-relativetimeformat": "^11.2.12",
-    "@gorhom/bottom-sheet": "^4.6.1",
+    "@gorhom/bottom-sheet": "^5.0.4",
     "@react-native-community/datetimepicker": "8.0.1",
-    "@sentry/react-native": "5.22.2",
-    "@tanstack/react-query": "^5.40.0",
-    "@tanstack/react-query-devtools": "^5.40.0",
-    "@th3rdwave/react-navigation-bottom-sheet": "^0.2.7",
+    "@sentry/react-native": "~5.33.1",
+    "@tanstack/react-query": "^5.59.0",
+    "@tanstack/react-query-devtools": "^5.59.0",
     "@trpc/client": "next",
     "@trpc/react-query": "next",
     "@vibefire/api": "0.1.0",
@@ -39,53 +48,49 @@
     "@vibefire/shared-state": "0.1.0",
     "@vibefire/utils": "0.1.0",
     "ajv": "^8.13.0",
-    "babel-plugin-module-resolver": "^5.0.2",
-    "eslint-config-universe": "^12.1.0",
-    "eslint-plugin-import": "^2.29.1",
     "expo": "~51.0.6",
     "expo-application": "5.9.1",
     "expo-auth-session": "5.5.2",
     "expo-clipboard": "6.0.3",
-    "expo-constants": "16.0.1",
+    "expo-constants": "~16.0.2",
     "expo-crypto": "13.0.2",
-    "expo-dev-client": "4.0.13",
+    "expo-dev-client": "~4.0.27",
     "expo-device": "6.0.2",
     "expo-font": "~12.0.5",
-    "expo-image": "1.12.9",
-    "expo-image-picker": "15.0.4",
+    "expo-image": "~1.13.0",
+    "expo-image-picker": "~15.0.7",
     "expo-linear-gradient": "13.0.2",
     "expo-linking": "6.3.1",
     "expo-location": "17.0.1",
-    "expo-notifications": "0.28.1",
+    "expo-notifications": "~0.28.18",
     "expo-router": "~3.5.14",
-    "expo-secure-store": "13.0.1",
-    "expo-splash-screen": "0.27.4",
+    "expo-secure-store": "~13.0.2",
+    "expo-splash-screen": "~0.27.6",
     "expo-status-bar": "1.12.1",
     "expo-updates": "~0.25.12",
     "expo-web-browser": "13.0.3",
-    "jotai": "^2.8.0",
+    "jotai": "^2.10.0",
     "lodash": "^4.17.21",
-    "luxon": "^3.4.4",
+    "luxon": "^3.5.0",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-error-boundary": "^4.0.13",
-    "react-native": "0.74.1",
+    "react-native": "~0.75.0",
     "react-native-element-dropdown": "^2.12.0",
-    "react-native-gesture-handler": "2.16.2",
+    "react-native-gesture-handler": "~2.18.1",
     "react-native-maps": "1.14.0",
     "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-popup-menu": "^0.16.1",
-    "react-native-reanimated": "~3.10.1",
+    "react-native-reanimated": "~3.10.0",
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-redash": "^18.1.3",
-    "react-native-safe-area-context": "4.10.1",
-    "react-native-screens": "3.31.1",
-    "react-native-svg": "15.2.0",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "~3.34.0",
+    "react-native-svg": "15.7.1",
     "react-native-timeline-flatlist": "^0.8.0",
     "react-native-toast-message": "^2.2.0",
-    "react-native-vision-camera": "4.0.3",
-    "superjson": "^2.2.1",
-    "tailwind-merge": "^2.3.0"
+    "react-native-vision-camera": "4.5.3",
+    "superjson": "^2.2.1"
   },
   "peerDependencies": {
     "react-dom": "18.2.0"
@@ -98,6 +103,9 @@
     "@types/webpack-env": "^1.18.4",
     "@vibefire/config": "0.1.0",
     "babel-preset-expo": "11.0.5",
-    "tailwindcss": "3.3.2"
+    "tailwindcss": "3.3.2",
+    "babel-plugin-module-resolver": "^5.0.2",
+    "eslint-config-universe": "^12.1.0",
+    "eslint-plugin-import": "^2.29.1"
   }
 }
