--- a/packages/shared-state/tsconfig.json
+++ b/packages/shared-state/tsconfig.json
@@ -3,7 +3,12 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "~/*": ["./src/*"]
+      "~/*": ["./src/*"],
+      "!api/*": ["../../packages/api/src/*"],
+      "!models/*": ["../../packages/models/src/*"],
+      "!managers/*": ["../../packages/managers/src/*"],
+      "!utils/*": ["../../packages/utils/src/*"],
+      "!services/*": ["../../packages/services/src/*"]
     }
   },
   "include": ["index.ts", "src/**/*.ts"]
