--- a/apps/app.vibefire.native/package.json
+++ b/apps/app.vibefire.native/package.json
@@ -38,7 +38,7 @@
     "@formatjs/intl-relativetimeformat": "^11.2.12",
     "@gorhom/bottom-sheet": "^5.0.4",
     "@react-native-community/datetimepicker": "8.0.1",
-    "@sentry/react-native": "~5.33.1",
+    "@sentry/react-native": "~5.24.3",
     "@tanstack/react-query": "^5.59.0",
     "@tanstack/react-query-devtools": "^5.59.0",
     "@trpc/client": "next",
@@ -48,7 +48,7 @@
     "@vibefire/shared-state": "0.1.0",
     "@vibefire/utils": "0.1.0",
     "ajv": "^8.13.0",
-    "expo": "~51.0.6",
+    "expo": "^51.0.38",
     "expo-application": "5.9.1",
     "expo-auth-session": "5.5.2",
     "expo-clipboard": "6.0.3",
@@ -86,7 +86,7 @@
     "react-native-redash": "^18.1.3",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "~3.34.0",
-    "react-native-svg": "15.7.1",
+    "react-native-svg": "15.2.0",
     "react-native-timeline-flatlist": "^0.8.0",
     "react-native-toast-message": "^2.2.0",
     "react-native-vision-camera": "4.5.3",
