--- a/apps/app.vibefire.native/package.json
+++ b/apps/app.vibefire.native/package.json
@@ -39,6 +39,7 @@
     "@gorhom/bottom-sheet": "^5.0.4",
     "@react-native-community/datetimepicker": "8.0.1",
     "@sentry/react-native": "~5.24.3",
+    "@shopify/flash-list": "1.6.4",
     "@tanstack/react-query": "^5.59.0",
     "@tanstack/react-query-devtools": "^5.59.0",
     "@trpc/client": "next",
@@ -62,7 +63,7 @@
     "expo-linear-gradient": "13.0.2",
     "expo-linking": "6.3.1",
     "expo-location": "17.0.1",
-    "expo-notifications": "~0.28.18",
+    "expo-notifications": "~0.28.19",
     "expo-router": "~3.5.14",
     "expo-secure-store": "~13.0.2",
     "expo-splash-screen": "~0.27.6",
