--- a/packages/utils/tsconfig.json
+++ b/packages/utils/tsconfig.json
@@ -7,5 +7,10 @@
       "!models/*": ["../../packages/models/src/*"]
     }
   },
-  "include": ["index.ts", "src/**/*.ts"]
+  "include": [
+    "index.ts",
+    "src/**/*.ts",
+    "../models/src/modelling.ts",
+    "../models/src/result.ts"
+  ]
 }
