--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@types/lodash": "^4.14.202",
     "@types/luxon": "^3.3.5",
     "@types/node": "^22.7.0",
-    "@types/react": "^18.2.38",
+    "@types/react": "~18.3.12",
     "@types/react-dom": "^18.2.17",
     "@vibefire/config": "0.1.0",
     "dotenv": "^16.4.5",
@@ -36,6 +36,6 @@
     "ts-jest": "^29.1.1",
     "turbo": "^2.2.3",
     "typescript": "^5.6.2",
-    "wrangler": "3.99.0"
+    "wrangler": "3.100.0"
   }
 }
