got generating groups working, sorting events correctly

--- a/apps/admin-tools/package.json
+++ b/apps/admin-tools/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "main": "dist/index.js",
   "scripts": {
-    "dev": "bun run src/index.ts"
+    "dev": "bunx tsx src/index.ts"
   },
   "dependencies": {
     "@vibefire/managers": "0.1.0",
